Update apps/bfd-server/bfd-server-war/src/main/java/gov/cms/bfd/server/war/commons/CommonQueries.java
minor change to simplify things a bit.

Co-authored-by: Michael J Burling <michael.burling@cms.hhs.gov>