@@ -65,13 +65,13 @@ public class CommonQueries {
    * @return int bitmask denoting which claims have data.
    */
   public static int availableClaimsData(EntityManager entityManager, long beneficiaryId) {
-    List<Object> values =
+    List<Integer> values =
         entityManager
-            .createNativeQuery(CHECK_CLAIMS_FOR_DATA_SQL)
+            .createNativeQuery(CHECK_CLAIMS_FOR_DATA_SQL, Integer.class)
             .setParameter("beneIdValue", beneficiaryId)
             .getResultList();
 
-    return (int) (values != null && values.size() > 0 ? values.get(0) : 0);
+    return (values.isEmpty() ? 0 : values.getFirst());
   }
 
   /**
